--- a/collaborative-whiteboard/package.json
+++ b/collaborative-whiteboard/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
     "primeng": "^16.7.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.1",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@angular/cli": "~16.2.9",
     "@angular/compiler-cli": "^16.2.11",
     "@types/jasmine": "~4.3.0",
+    "@types/uuid": "^9.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
