--- a/collaborative-whiteboard/package.json
+++ b/collaborative-whiteboard/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.11",
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
+    "ngx-logger": "^5.0.12",
     "primeng": "^16.7.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
