--- a/collaborative-whiteboard/package.json
+++ b/collaborative-whiteboard/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
     "ngx-logger": "^5.0.12",
+    "primeflex": "^3.3.1",
     "primeng": "^16.7.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
