--- a/collaborative-whiteboard/package.json
+++ b/collaborative-whiteboard/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.11",
     "ngx-logger": "^5.0.12",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^16.7.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
