--- a/collaborative-whiteboard/package.json
+++ b/collaborative-whiteboard/package.json
@@ -23,6 +23,7 @@
     "primeicons": "^6.0.1",
     "primeng": "^16.7.0",
     "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.4",
     "tslib": "^2.3.0",
     "uuid": "^9.0.1",
     "zone.js": "~0.13.3"
@@ -32,6 +33,7 @@
     "@angular/cli": "~16.2.9",
     "@angular/compiler-cli": "^16.2.11",
     "@types/jasmine": "~4.3.0",
+    "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
